# GeneralizedGraphicsRenderer

./: .gitignore  CMakeLists.txt  Dependencies.cmake  GeneralizedGraphicsRenderer.cpp  GeneralizedGraphicsRenderer.h  README.md  To-Do
App/Resources/Shaders/: SimpleVertexShader.shader
App/Source/: Main.cpp
Core/Source/: Application.cpp  Application.h  Core.cpp  Core.h  Window.cpp  Window.h
Core/Utils/: Singleton.h
app/: CMakeLists.txt
app/src/: Main.cpp
core/: CMakeLists.txt
core/src/: Core.cpp  Core.h  GeneralizedGraphicsRenderer.cpp
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
resources/shaders/: SimpleFragmentShader.shader
src/: GeneralizedGraphicsRenderer.cpp
